Adjust Legal Notice
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/content/static/LEGAL_NOTICE.mdx
+++ b/content/static/LEGAL_NOTICE.mdx
@@ -11,13 +11,13 @@ Tel: (+49) 0711 911-0
 
 represented by the Executive Board:  
 Oliver Blume, Chairperson  
-Lutz Meschke, Deputy Chairperson  
+Matthias Becker  
+Dr. Jochen Breckner  
 Barbara Frenkel  
 Andreas Haffner  
 Sajjad Khan  
-Detlev von Platen  
 Albrecht Reimold  
-Michael Steiner  
+Dr. Michael Steiner  
 <br />
 
 Registry court: District Court Stuttgart  
