show new contributor story as latest

--- a/content/blog/meta-bnf.mdx
+++ b/content/blog/meta-bnf.mdx
@@ -1,6 +1,6 @@
 ---
 title: MetaBNF
-date: 2025-02-10
+date: 2025-06-11
 image: /assets/blog/mbnf/preview.jpg
 hero: /assets/blog/mbnf/hero.jpg
 descriptionShort: The Porsche Engineering community has introduced MetaBNF, a free and open-source (FOSS) project that significantly accelerates the creation of domain-specific languages (DSLs).
@@ -9,6 +9,7 @@ author:
   description: The Porsche Engineering community dedicated to the Meta Programming System (MPS) has introduced MetaBNF, a free and open-source (FOSS) project that significantly accelerates the creation of domain-specific languages (DSLs) to address complex challenges in various technical domains.
   image: https://raw.githubusercontent.com/porsche-design-system/porsche-design-system/main/packages/assets/projects/crest/src/porsche-crest%403x.png
   slug: https://github.com/porscheofficial/MetaBNF
+readTime: 5min
 ---
 
 <ImageText imageSrc="/assets/blog/mbnf/1.jpg" imageAlt="Software developers checking content on a tablet" theme="light"
